--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Prime seed</title>
     <link rel="stylesheet" href="css/normalize_v8.0.1.css" type="text/css" />
     <link rel="stylesheet" href="fonts/fonts.css" type="text/css" />
     <link rel="stylesheet" href="css/slick.css" type="text/css" />
@@ -21,16 +21,17 @@
     <header class="wrap">
         <div class="top_header wrap main_flex_column flex__jcontent_center">
             <div class="cont main_flex flex__jcontent_between flex__align-items_center">
-                <div class="logo">
-                    <img src="img/logo.png" alt="">
+                <div class="logo main_flex">
+                    <img src="img/klipartz.com.png" alt="">
+                    <h2 class="main main_flex flex__align-items_center">prime <br>seed</h2>
                 </div>
                 <div class="adress main_flex flex__jcontent_center">
                     <div class="left main_flex_column flex__jcontent_start">
                         <img src="img/location.png" alt="">
                     </div>
                     <div class="right">
-                        <p>г.Пенза<br>
-                            <b>ул. Большая Арбековская д.127</b></p>
+                        <p>г.Павлоград<br>
+                            <b>проспект Урожайный д.366</b></p>
                     </div>
                 </div>
                 <div class="schedule main_flex flex__jcontent_center">
@@ -47,8 +48,7 @@
                         <img src="img/phone.png" alt="">
                     </div>
                     <div class="right main_flex_column flex__jcontent_start">
-                        <a href="tel:8 (8412) 25-29-29">8 (8412) <b>25-29-29</b></a>
-                        <a href="tel:8 (927) 375-29-29">8 (927) <b>375-29-29</b></a>
+                        <a href="tel:8 (095) 860-41-37">8 (095) <b>860-41-37</b></a>
                     </div>
                 </div>
                 <div class="call_back main_flex_column flex__jcontent_center">
@@ -64,30 +64,28 @@
         <div class="navigation_header main_flex flex__jcontent_between">
             <div class="navigation_left main_flex_column_nw flex__jcontent_between">
                 <h1>
-                    <div class="rectangl"></div>Работа<br> Яндекс Такси<br> в Пензе
+                    <div class="rectangl"></div>Семена<br>подсолнуха<br> в Украине
                 </h1>
-                <p>Зарабатывай от 30 000 рублей в месяц<br>
-                    по программе аренды,<br>
-                    выкупа или работай<br> за проценты от заказов</p>
+                <p>Заказывайте семена элитного<br>
+                    подсолнуха как оптом,<br>
+                    так и в розницу</p>
 
                 <div class="form">
                     <form action="" class="main_flex__nowrap">
                         <input type="text" placeholder="Ваш номер телефона:">
-                        <button>Начать сейчас</button>
+                        <button>Заказать звонок</button>
                     </form>
-                    <p class="small">нажимая кнопку "Начать сейчас" Вы соглашаетесь <br>
+                    <p class="small">нажимая кнопку "Заказать звонок" Вы соглашаетесь <br>
                         с политикой конфиденциальности</p>
                 </div>
             </div>
             <div class="navigation_right">
                 <nav class="main_flex_column flex__jcontent_around flex__align-content_flex-end flex__align-items_end">
-                    <li><a href="#work">Требования</a></li>
-                    <li><a href="#taxi_purchase">Выкуп БУ авто</a></li>
-                    <li><a href="#rent_new">Выкуп новых авто</a></li>
-                    <li><a href="#rent_previously">Аренда</a></li>
-                    <li><a href="#advantage">Работа за проценты</a></li>
+                    <li><a href="#work">Основное</a></li>
+                    <li><a href="#taxi_purchase">Наше преимущество</a></li>
+                    <li><a href="#gift">Спецпредложение</a></li>
+                    <li><a href="#rent_previously">Каталог товаров</a></li>
                     <li><a href="#testimonials">Отзывы</a></li>
-                    <li><a href="#career">Как начать?</a></li>
                     <li><a href="#kontakt">Контакты</a></li>
                 </nav>
             </div>
@@ -97,19 +95,19 @@
     <section id="work" class="wrap main_flex flex__jcontent_between">
         <div class="section_left">
             <div class="border"></div>
-            <img src="img/Untitled-11 1.png" alt="">
+            <img src="img/depositphotos_15434595-stock-photo-sunflower-seeds.jpg" alt="">
         </div>
         <div class="section_right">
             <h2>
-                <div class="rectangl"></div>ЧТО НУЖНО, ЧТОБЫ НАЧАТЬ РАБОТУ?
+                <div class="rectangl"></div>ЧТО НУЖНО ЗНАТЬ ПЕРЕД ТЕМ, КАК СДЕЛАТЬ ЗАКАЗ?
             </h2>
             <ul class="main_flex_column flex__jcontent_around">
-                <li>Опыт вождения от 5 лет</li>
-                <li>Ваш возраст 25-55</li>
-                <li>Водительские права категории B</li>
-                <li>Мобильное устройство Android 7.0 или новее</li>
-                <li>Гражданство РФ, Казахстан, Белоруссия, Киргизия, Армения, ЛНР, ДНР</li>
-                <li>Опрятность и вежливость</li>
+                <li>Реализуем лучшие сорта</li>
+                <li>Только качественные семена</li>
+                <li>Всегда в наличии</li>
+                <li>Оперативное обслуживание</li>
+                <li>Доставка по всей Украине</li>
+                <li>Подробная консультация</li>
             </ul>
         </div>
     </section>
@@ -118,44 +116,40 @@
 
         <div class="wraper main_flex flex__jcontent_between flex__align-content_space-around">
             <h2>
-                <div class="rectangl"></div>ВЫКУП PRIME ТАКСИ<br> ВЫГОДЫ И УСЛОВИЯ СОТРУДНИЧЕСТВА
+                <div class="rectangl"></div>ПРЕИМУЩЕСТВО<br> РАБОТЫ С НАМИ
             </h2>
             <div class="block block1">
                 <img src="img/XMLID 1304.png" alt="">
                 <h3>Все необходимые документы</h3>
-                <p>Вы получаете лицензию на перевозку пассажиров, путевой лист, мед. осмотр, тех. осмотр, документацию
-                    на газ</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta qui laboriosam, veniam quis sint et nostrum totam repellendus iure provident quo unde laborum ipsam asperiores beatae. Vitae laborum explicabo provident?</p>
             </div>
             <div class="block block2">
                 <img src="img/XMLID 1100.png" alt="">
-                <h3>Обеспечим Вас<br> заказами</h3>
-                <p>На автомобиле Такси Прайм у Вас высокий приоритет получения заказов от Яндекс Такси</p>
+                <h3>Только качественный<br> продукт</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt molestiae culpa quia dicta cupiditate voluptate commodi? Fuga sunt, recusandae eos repudiandae et, deleniti perspiciatis harum cupiditate eaque in pariatur corrupti.</p>
             </div>
             <div class="block block3">
                 <img src="img/Vector.png " alt="">
                 <h3>Поддержка 24/7</h3>
-                <p>Вы получаете подробные консультации круглосуточно, позвонив нашему диспетчеру по телефону</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat vel ipsam, animi iusto quidem odit placeat perspiciatis, exercitationem, laboriosam provident dicta nam quod dolorum dolor deleniti. Accusamus repellat facilis quae!</p>
             </div>
             <div class="interlayer"></div>
             <div class="interlayer"></div>
             <div class="interlayer"></div>
             <div class="block block4">
                 <img src="img/XMLID 887.png" alt="">
-                <h3>Собственные<br> заправки газом</h3>
-                <p>Вы заправляетесь на наших собственных заправках по льготным условиям и экономите</p>
+                <h3>Надёжная<br> упаковка</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa exercitationem sunt laboriosam quam voluptatem provident accusamus repudiandae. Temporibus quasi provident quam harum tempora a, inventore quo. Velit facilis debitis tempore!</p>
             </div>
             <div class="block block5">
                 <img src="img/XMLID 839.png" alt="">
-                <h3>Все инструменты<br> для работы</h3>
-                <p>Предоставляем возможность беспроцентной рассрочки на приобретение смартфона, если у Вас его нет или
-                    он старой модели</p>
+                <h3>Отправка в течении<br> двух дней</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto dicta, vitae, distinctio cum ex quia non libero deleniti nulla autem quod voluptatibus numquam qui illo fugit incidunt accusamus pariatur blanditiis.</p>
             </div>
             <div class="block block6">
                 <img src="img/XMLID 205.png" alt="">
-                <h3>Предоставляем<br>
-                    отпуск</h3>
-                <p>14 дней отпуска. На время отпуска выплаты по выкупу останавливаются. Срок выкупа при этом увеличится
-                    на количество суток отпуска</p>
+                <h3>Скидки <br>постоянным клиентам</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, illum fugiat in repellat soluta iusto. Asperiores similique ducimus, modi amet doloribus explicabo veritatis architecto, repellendus eius nisi facere mollitia repudiandae!</p>
             </div>
         </div>
     </section>
@@ -183,7 +177,7 @@
         </div>
     </section>
 
-    <section id="rent_previously" class="wrap">
+    <!-- <section id="rent_previously" class="wrap">
         <h2>
             <div class="rectangl"></div>АРЕНДА АВТОМОБИЛЯ<br> С ПРОБЕГОМ С ПРАВОМ ВЫКУПА
         </h2>
@@ -727,7 +721,7 @@
                 <button>Перезвоните мне</button>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer class="wrap main_flex_column flex__jcontent_between">
         <div class="line"></div>
