--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
         <div class="wraper main_flex flex__jcontent_between">
             <div class="left main_flex_column flex__jcontent_around">
                 <h2>
-                    <div class="rectangl"></div>2 КОМПЛЕКТА<br> РЕЗИНЫ В ПОДАРОК
+                    <div class="rectangl"></div>Пять мешков<br> По цене четырёх
                 </h2>
-                <p>Комплект зимней и летней резины<br>
-                    Вы получаете за счёт компании</p>
+                <p>Больше покупай<br>
+                    - меньше затрачай</p>
             </div>
             <div class="right main_flex_column flex__jcontent_center flex__align-items_center">
                 <div class="form main_flex_column flex__jcontent_center">
                     <form action="" class="main_flex__nowrap">
                         <input type="text" placeholder="Ваш номер телефона:">
-                        <button>Начать сейчас</button>
+                        <button>Перезвоните мне</button>
                     </form>
                     <p class="small">нажимая кнопку "Начать сейчас" Вы соглашаетесь <br>
                         с политикой конфиденциальности</p>
@@ -732,7 +732,7 @@
                     и условия, размещенные на сайте, не являются публичной офертой</p>
             </div>
             <div class="right main_flex_column flex__jcontent_end">
-                <p>© ООО Prime taxi 2019 <br>
+                <p>© ООО Prime seed 2020 <br>
                     Все права защищены</p>
             </div>
         </div>
