--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     </section>
 
     <section id="gift" class="wrap">
+        <div class="background"></div>
         <div class="wraper main_flex flex__jcontent_between">
             <div class="left main_flex_column flex__jcontent_around">
                 <h2>
