--- a/index.html
+++ b/index.html
@@ -217,6 +217,22 @@
         </div>
     </section>
 
+    <section id="ptoduck" class="wrap">
+        <div class="wrapper">
+            <div class="title-nav">
+                <nav>
+                    <ul>
+                        <li>Все сорта</li>
+                        <li>Дуэт</li>
+                        <li>Октава</li>
+                        <li>Масс 90.Ф</li>
+                    </ul>
+                </nav>
+            </div>
+
+        </div>
+    </section>
+
     <section id="testimonials" class="wrap">
         <h2>
             <div class="rectangl"></div>ОТЗЫВЫ<br>
